--- a/html/clock.html
+++ b/html/clock.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./../css/fontSetting.css">
+    <link rel="stylesheet" href="./../css/fontSettings.css">
     <script src="./../lib/jquery-3.6.0.min.js"></script>
     <script src="./../lib/jquery.transit.min.js"></script>
 
